css updated to fix overlaping intro to menu

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,7 +41,7 @@ body {
   }
   
   #menu ul li a:hover {
-	background-color: #2c2ce7;
+	background-color: #c82ce7;
   }
   
   .intro {
@@ -51,7 +51,7 @@ body {
 	padding: 20px;
 	font-size: 16px;
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-	border: 3px solid #f7f8f9;
+	border: 3px solid #c82ce7;
 	border-radius: 3%;
 	background-color: rgba(64, 126, 184, 0.7);
 	color: white;
@@ -67,22 +67,6 @@ body {
 	max-height: 99%;
 	margin: auto;
   }
-  /* Styles for the software-list class */
-.software-list button {
-    padding: 10px 20px;
-    background-color: #3726b8;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    margin: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.software-list button:hover {
-    background-color: #45a049;
-}
   
   @media screen and (max-width: 800px) {
 	body {
@@ -109,24 +93,11 @@ body {
 	  left: auto;
 	  margin-top: 10px;
 	  width: 100%;
+	  max-width: 100%;
 	}
   
 	.img {
 	  top: 100px;
 	}
   }
-  
-  @media (max-width: 768px) {
-    .software-list button {
-        font-size: 14px;
-        padding: 8px 16px;
-    }
-}
-
-@media (max-width: 480px) {
-    .software-list button {
-        font-size: 12px;
-        padding: 6px 12px;
-    }
-}
   
